# hc-enterprise-kg-enrich

./: CLAUDE.md  LICENSE  README.md  hc-enterprise-kg-enrich-v0.3.0.mcpb  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 001-package-separation.md  002-llm-provider-abstraction.md  003-search-grounding.md  004-graphguard-contracts.md  005-provenance-audit-trail.md  006-observability-first.md  007-confidence-tiers.md  008-entity-prioritization.md  009-parallel-contract-execution.md  010-org-grounding.md  011-kg-completeness-scoring.md  012-entity-discovery.md  013-convergence-loop.md
src/hckg_enrich/: __init__.py  cli.py
src/hckg_enrich/agents/: __init__.py  base.py  coherence_agent.py  commit_agent.py  confidence_agent.py  context_agent.py  discovery_agent.py  prioritization_agent.py  reasoning_agent.py  search_agent.py
src/hckg_enrich/context/: __init__.py  builder.py  embedding_retriever.py  retriever.py
src/hckg_enrich/guard/: __init__.py  contract.py  guardian.py  reports.py
src/hckg_enrich/io/: __init__.py  file_safety.py  kg_adapter.py
src/hckg_enrich/mcp_server/: __init__.py  server.py  state.py  tools.py
src/hckg_enrich/observability/: __init__.py  metrics.py  tracer.py
src/hckg_enrich/org/: __init__.py  profile.py  research_agent.py
src/hckg_enrich/pipeline/: __init__.py  controller.py  convergence.py
src/hckg_enrich/provenance/: __init__.py  artifact_store.py  audit_log.py  record.py  run.py
src/hckg_enrich/providers/: __init__.py  anthropic.py  base.py  (+2 more)
tests/: conftest.py
tests/integration/: test_enrichment_pipeline.py
(+53 files in other folders)
