[tool.poetry]
name = "hc-enterprise-kg-enrich"
version = "0.1.0"
description = "AI-powered enrichment pipeline for hc-enterprise-kg — LLM reasoning, web search grounding, and GraphGuard quality contracts"
authors = ["thehipsterciso"]
readme = "README.md"
packages = [{include = "hckg_enrich", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
anthropic = ">=0.40.0"
pydantic = ">=2.0"
httpx = ">=0.27"
networkx = ">=3.0"
tavily-python = {version = ">=0.3", optional = true}

[tool.poetry.extras]
tavily = ["tavily-python"]
full = ["tavily-python"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.10"
respx = ">=0.21"

[tool.poetry.scripts]
hckg-enrich = "hckg_enrich.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "B904"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
